<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="accountViewModel"
            type="com.azizbek.mygithub.ui.account.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.AccountFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/windowBackground">


                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_share_24"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:onClick="@{() -> accountViewModel.shareUserAccount()}"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/img_share"
                    android:layout_toLeftOf="@id/image_filter"
                    android:layout_toEndOf="@id/img_share"
                    android:layout_toStartOf="@id/signOut"
                    android:text="@string/githubusername"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:maxEms="10"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#000"
                    android:gravity="center" />

                <ImageView
                    android:id="@+id/signOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_more_vert_24"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/githublinkarea"
            app:layout_constraintTop_toBottomOf="@id/action_bar"
            android:layout_width="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image_header"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                app:civ_border_overlay="true"
                app:civ_border_width="2dp"
                app:civ_border_color="#03A9F4"
                android:src="@drawable/githublogo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/githubusername"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/githubusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="#000"
                android:textAlignment="center"
                android:maxLines="1"
                android:maxEms="10"
                android:gravity="center_horizontal"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/user_image_header"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="#000"
                android:gravity="center_horizontal"
                android:text="@string/email"
                app:layout_constraintTop_toBottomOf="@id/githubusername"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/myLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="12sp"
                android:textColor="#000"
                android:text="@string/your_location"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <LinearLayout
                android:id="@+id/followers"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/myLocation"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:weightSum="3">

                <View
                    android:layout_width="40dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/followCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_100"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textSize="12sp"
                        android:gravity="center_horizontal|top"
                        android:layout_marginTop="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/followersCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_100"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textSize="12sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal|top" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/publicRepos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_100"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/starred"
                        android:textSize="12sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal|top" />

                </LinearLayout>

                <View
                    android:layout_width="40dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/followers"
                app:layout_constraintRight_toRightOf="parent">


                <ImageView
                    android:id="@+id/gitlogo"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/githublogo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="0.2" />

                <TextView
                    android:id="@+id/githubusernamebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_bac"
                    android:text="@string/github_com"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="16sp"
                    android:textColor="#000"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="0.6"
                    android:maxEms="10"
                    android:maxLines="1"
                    android:padding="10dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/bio"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:textSize="12sp"
                android:maxLines="3"
                android:maxEms="10"
                android:text="@string/bio"
                android:gravity="center_horizontal"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link"
                app:layout_constraintLeft_toLeftOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>